feature: changed styles

--- a/index.html
+++ b/index.html
@@ -41,13 +41,19 @@
     <!-- <img src="./imgs/image3.jpg" alt="" srcset=""> -->
     <div class="imgs-container" style="margin-bottom: 80px;">
         <div class="img-content">
-            <img  loading="lazy" src="imgs/2.png" alt="" srcset="">
+            <div style="display: flex; justify-content: start; overflow: hidden; width: 100%;">
+                <img  loading="lazy" src="imgs/2.png" alt="" srcset="">
+            </div>
         </div>
         <div class="img-content">
-            <img  loading="lazy" src="imgs/3.png" alt="" srcset="">
+            <div style="display: flex; justify-content: start; overflow: hidden; width: 100%;">
+                <img  loading="lazy" src="imgs/3.png" alt="" srcset="">
+            </div>
         </div>
         <div class="img-content">
-            <img  loading="lazy" src="imgs/4.png" alt="" srcset="">
+            <div style="display: flex; justify-content: start; overflow: hidden; width: 100%;">
+                <img  loading="lazy" src="imgs/4.png" alt="" srcset="">
+            </div>
         </div>
     </div>
     <div class="slider-imgs" style="transform: translateY(-100px);">
@@ -87,46 +93,46 @@
             </div>
             <div class="photo-preview">
                 <a href="https://www.instagram.com/p/Cuz6EdLr4q6/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t39.30808-6/361623202_293063773093018_8206871084528403992_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xNDczeDE0NzIuc2RyIn0&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=110&_nc_ohc=ccSsD-wGtBsAX8hQzXM&edm=ABmJApAAAAAA&ccb=7-5&ig_cache_key=MzE0OTExNTk1NzM3MjIyNjIzNA%3D%3D.2-ccb7-5&oh=00_AfCJu7efeFyMmXqyGJhcSRyqlqhjb-mXy939fORPgxffCw&oe=653B3B66&_nc_sid=b41fef" alt="" srcset="">
+                    <img src="imgs/redes/imagem1.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="video-preview">
                 <i class="fa-solid fa-film" style="color: #ffffff;"></i>
                 <a href="https://www.instagram.com/p/CsQxwebtEG1/">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t51.2885-15/347074073_782092069984353_6721422833549283132_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi41NDB4OTYwLnNkciJ9&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=109&_nc_ohc=44fyCwHjU34AX-5HS-Q&edm=ABmJApABAAAA&ccb=7-5&ig_cache_key=MzEwMzE5ODk3ODc0OTI1MjAyMQ%3D%3D.2-ccb7-5&oh=00_AfDH0T8AfTCxCrHo17l2R05mg1tJawKeVS7P8RKvoNiqAQ&oe=653B6555&_nc_sid=b41fef" alt="" srcset="">
+                    <img src="imgs/redes/video2.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="photo-preview">
-                <a href="https://www.instagram.com/reel/CtYh9vLrTqS/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t39.30808-6/336571356_617573136850764_2951673292800302225_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMzMzeDE2NjYuc2RyIn0&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=qhLXR1LjCvsAX_0vQu6&edm=ABmJApAAAAAA&ccb=7-5&ig_cache_key=MzA2MjU3NTMyMDc1ODg2NTY0MQ%3D%3D.2-ccb7-5&oh=00_AfCZMkMHIwVQnxYyONCMz0i86XP9VFFPyztdtMcEd2d76w&oe=653B9069&_nc_sid=b41fef" alt="" srcset="">
+                <a href="https://www.instagram.com/p/CxDwyKrtX_V/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                    <img src="imgs/redes/imagem2.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="video-preview">
                 <i class="fa-solid fa-film" style="color: #ffffff;"></i>
-                <a href="https://www.instagram.com/p/CqAdAcrtc7p/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t51.2885-15/352862031_197385992867075_8470964253188027195_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi40MDh4NzI2LnNkciJ9&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=111&_nc_ohc=p_mUYaeo5EMAX_oAG4e&edm=ABmJApABAAAA&ccb=7-5&ig_cache_key=MzEyMzM5NTcxOTY2NjE1NDEzMA%3D%3D.2-ccb7-5&oh=00_AfCl2MjXCpV9mDoh3mImTuMqqFXtSQBI-tvNt49_OH1rUw&oe=653BBD45&_nc_sid=b41fef" alt="" srcset="">
+                <a href="https://www.instagram.com/reel/CtYh9vLrTqS/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                    <img src="imgs/redes/video3.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="video-preview">
                 <i class="fa-solid fa-film" style="color: #ffffff;"></i>
                 <a href="https://www.instagram.com/reel/CsuG0wNJAjU/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t51.2885-15/387268875_286261787561293_3955548271758154020_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xNDQweDI1NTkuc2RyIn0&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=101&_nc_ohc=AInvsbJuojkAX8BWMWd&edm=ACHbZRIBAAAA&ccb=7-5&ig_cache_key=MzIwOTY2Mzg2NzE0MzkwNjc1MDIwNTAwNjExNjIwMTMwNzM%3D.2-ccb7-5&oh=00_AfCaAwRa6hodcsREJmj2FFAWH-kjgKmvDvuwyxX-bY9YGA&oe=653BCC50&_nc_sid=c024bc&quot;" alt="" srcset="">
+                    <img src="imgs/redes/video4.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="photo-preview">
-                <a href="https://www.instagram.com/p/CxDwyKrtX_V/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t39.30808-6/378171449_320074413725287_8552054661006810299_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xNjAweDEwODEuc2RyIn0&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=sssaTEvTM34AX8gEjH0&edm=ABmJApAAAAAA&ccb=7-5&ig_cache_key=MzE4OTYwNzUxNDc4NTU0NjE5Nw%3D%3D.2-ccb7-5&oh=00_AfD39Qo_XqMEneUODHaVYzqg2Jjb7ax-Omo6kmmbuz_GnQ&oe=653B2F31&_nc_sid=b41fef" alt="" srcset="">
+                <a href="https://www.instagram.com/p/CwWCzHYNGSu/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                    <img src="imgs/redes/imagem3.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="video-preview">
                 <i class="fa-solid fa-film" style="color: #ffffff;"></i>
-                <a href="https://www.instagram.com/reel/CyLBEgZhOW-/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://instagram.fsdu17-1.fna.fbcdn.net/v/t51.2885-15/349046823_1351946302397839_6153873546390119292_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi40MTF4NzI2LnNkciJ9&_nc_ht=instagram.fsdu17-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=s1B8ZHsxo3EAX9hPrLJ&edm=ACHbZRIBAAAA&ccb=7-5&ig_cache_key=MzExMTQ1NDQwNjAxMTUyMTIzNg%3D%3D.2-ccb7-5&oh=00_AfC7vxiFOYn26i0WDYCnJXUvTrnAL4r4A48yMyFF-B4zPw&oe=653B70A9&_nc_sid=c024bc&quot;" alt="" srcset="">
+                <a href="https://www.instagram.com/p/CwAORg2u0Z1/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
+                    <img src="imgs/redes/video5.jpg" alt="" srcset="">
                 </a>
             </div>
             <div class="photo-preview">
                 <a href="https://www.instagram.com/p/CwAORg2u0Z1/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==">
-                    <img src="https://scontent-ams4-1.cdninstagram.com/v/t39.30808-6/366612478_307500448316017_4043279976218375688_n.jpg?stp=dst-jpg_e15&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi43Njh4OTYwLnNkciJ9&_nc_ht=scontent-ams4-1.cdninstagram.com&_nc_cat=101&_nc_ohc=eLdsLI7s8rcAX9ToMR5&edm=APs17CUAAAAA&ccb=7-5&ig_cache_key=MzE3MDU5NjkxMzgyOTA3MDQ1Mw%3D%3D.2-ccb7-5&oh=00_AfCvE16oV588W1GXPhQBh3PunyM_132KTvppoHJKF-ESdQ&oe=653FED73&_nc_sid=10d13b" alt="" srcset="">
+                    <img src="imgs/redes/imagem4.jpg" alt="" srcset="">
                 </a>
             </div>
         </div>
@@ -282,11 +288,6 @@
             <button>
                 <i class="fa-solid fa-x"></i>
             </button>
-            <div id="ytplayer">
-                <iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com"
-  frameborder="0"></iframe>
-            </div>
         </div>
     </section>
 
