feature: add icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head> 
 <body>
     <header>
-        <div>
+        <div style="display: flex; align-items: center;">
+            <img src="./imgs/Monograma Branco.png" alt=""> 
             <h2>Dinnal Cruz & Dorival</h2>
         </div>
         <nav>
@@ -34,7 +35,7 @@
         </nav>
     </header>
     <div id="banner">
-        <h1>Dinnal Cruz & Dorival</h1>
+        <h1><img src="./imgs/logo.png" alt=""></h1>
     </div>
     <!-- <img src="./imgs/image1.jpg" alt="" > -->
     <!-- <img src="./imgs/image2.jpg" alt="" > -->
