feature: add new image

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="video-preview">
                 <i class="fa-solid fa-film" style="color: #ffffff;"></i>
-                <a href="https://www.instagram.com/p/CsQxwebtEG1/">
+                <a href="https://www.instagram.com/reel/Cx-xe_orHxV/?utm_source=ig_web_copy_link&igshid=N2ViNmM2MDRjNw==">
                     <img src="imgs/redes/video2.jpg" alt="" >
                 </a>
             </div>
